@@ -13,6 +13,7 @@
  358062 spurious error message on nntp 411 response (Pavel)
  400670 fold together some of the redundant translation strings
  400800 use libsexy for the toolbar's icon entry fields
+ 402121 array bounds read when parsing dates in scorefile
 
 0.121 "Dortmunder"
  390784 crash when dragging over URL (Paul Williamson)
